2008-08-18  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Don't try and move the temp file when skipping tracks (#547018,
	Matthew Martin).
	
2008-08-18  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Free the option context (#547924, Pierre Benz)

2008-08-17  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't block the UI when calling nautilus-cd-burner (#548140)

2008-08-08  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Fix playback track switching (#546942, thanks Matthew Martin).

2008-08-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.23.1.

2008-08-04  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Fix play+pause+play (#523182, thanks Matthew Martin).

2008-06-17  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	* data/sound-juicer.schemas.in:
	Add %ay, album year.  Based on a patch by Juan F. Giménez
	Silva (#522909).

2008-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.23.0.

2008-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* Makefile.am:
	Require intltool 0.40.

2008-06-05  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-util.[ch]:
	* src/sj-extracting.c:
	Update to the latest make_directory_with_parents from bugzilla.

2008-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-main.c:
	* src/sound-juicer.h:
	* src/sj-play.c:
	* src/sj-extracting.c:
	* src/sj-prefs.c:
	* libjuicer/sj-extractor.c:
	* libjuicer/sj-util.c:
	* libjuicer/sj-extractor.h:
	* libjuicer/sj-util.h:
	Port to GIO.  Thanks to Michael Terry for the bulk of this
	work! (#514673).

2008-05-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Specify that URLs can be passed when starting SJ
	
	* src/sj-main.c:
	Munge any passed URLs into device paths.

	#530423, thanks Bastien "Big Baz" Nocera.

2008-05-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c: