@@ -787,7 +787,7 @@
                           <widget class="GtkCheckButton" id="check_eject">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="label" translatable="yes">_Eject when finished</property>
+                            <property name="label" translatable="yes">_Eject after extracting tracks</property>
                             <property name="use_underline">True</property>
                             <property name="response_id">0</property>
                             <property name="draw_indicator">True</property>
