@@ -1,6 +1,16 @@
 2008-08-18  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
+	Don't eject the CD unless some tracks were successfully ripped.
+
+	* data/sound-juicer.glade:
+	Small string clarification.
+
+	#530110, Matthew Martin.
+
+2008-08-18  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
 	Don't try and move the temp file when skipping tracks (#547018,
 	Matthew Martin).
 	
